--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -1,35 +1,36 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java CI with Maven
+name: Blackduck scan
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+    - mains
 
 jobs:
-  build:
-
+  blackduck-codescan:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - name: Checkout repository code
+        uses: actions/checkout@v3
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      - name: Print GITHUB_RUN_ID
+        shell: bash
+        run: |
+          echo "Ref name is $GITHUB_RUN_ID"
+          echo "Source is ${{ github.server_url }}/${{ github.repository }}"
+          echo "Subject is $GITHUB_WORKFLOW_REF|${{ github.run_id }}|${{ github.run_attempt }}|${{ github.run_number }}"
+          echo "Job is $GITHUB_JOB"
+          echo "Step id is ${{ steps.internal.id }}"
+          curl checkip.amazonaws.com
+
+      - name: Klocwork scan
+        uses: cloudbees-io-gha/perforce-klocwork-sast-publish@v1
+        with:
+          cloudbees_pat_token: ${{ secrets.CLOUDBEES_PREPROD_PAT }}
+          cloudbees_api_url: ${{ vars.CLOUDBEES_PREPROD_API_URL }}
+          blackduck_server_url: ${{ vars.BLACKDUCK_SERVER_URL }}
+          blackduck_api_token: ${{ secrets.BLACKDUCK_API_TOKEN }}
+          url: ${{ vars.KLOCWORK_URL }}
+          token: ${{ secrets.NEW_KLOCWORK_APP_TOKEN }}
+          license-host: ${{ vars.KLOCWORK_LICENSE }}
+          username: ${{ vars.KLOCWORK_USERNAME }}
+          build-tool:  ${{ vars.KLOCWORK_BUILD_TOOL }}
