--- a/.github/workflows/klocwork1.yml
+++ b/.github/workflows/klocwork1.yml
@@ -3,10 +3,11 @@ name: Klocwork scan
 on:
   push:
     branches:
-    - main
+      - main
+
 permissions:
-      id-token: write
-      contents: read 
+  id-token: write      # needed for OIDC token access
+  contents: read       # needed for actions/checkout
 
 jobs:
   klocwork-codescan:
