Update Klocwork scan configuration in workflow

--- a/.github/workflows/klocwork1.yml
+++ b/.github/workflows/klocwork1.yml
@@ -29,8 +29,7 @@ jobs:
       - name: Klocwork scan
         uses: cloudbees-io-gha/perforce-klocwork-sast-publish@v1
         with:
-          cloudbees-api-token: ${{ secrets.CLOUDBEES_QA_PAT }}
-          cloudbees-api-url: ${{ vars.CLOUDBEES_QA_API_URL }}
+          cloudbees-url: ${{ vars.CLOUDBEES_QA_API_URL }}
           url: ${{ vars.KLOCWORK_URL }}
           token: ${{ secrets.NEW_KLOCWORK_APP_TOKEN }}
           license-host: ${{ vars.KLOCWORK_LICENSE }}
