--- a/.github/workflows/klocwork1.yml
+++ b/.github/workflows/klocwork1.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Test server connectivity
         run: |
-         curl -v ${{ vars.KLOCWORK_URL }} || echo "Server not reachable"
+          curl -v ${{ vars.KLOCWORK_URL }} || echo "Server not reachable"
          
       - name: Checkout repository code
         uses: actions/checkout@v3
@@ -30,12 +30,23 @@ jobs:
           echo "Step id is ${{ steps.internal.id }}"
           curl checkip.amazonaws.com
 
+      - name: Get runner public IP
+        id: get_ip
+        shell: bash
+        run: |
+          RUNNER_IP=$(curl -s icanhazip.com)
+          echo "Runner's Public IP: $RUNNER_IP"
+          echo "Waiting 2 minutes for SG update..."
+          sleep 120
+          echo "RUNNER_IP=$RUNNER_IP" >> $GITHUB_ENV
+
       - name: Klocwork scan
         uses: cloudbees-io-gha/perforce-klocwork-sast-publish@v1
         with:
           cloudbees-url: ${{ vars.CLOUDBEES_QA_API_URL }}
-          url: ${{ vars.KLOCWORK_URL }}
+          # Insert the runner's public IP dynamically into the KLOCWORK_URL
+          url: "http://${{ env.RUNNER_IP }}:port"  # replace 'port' with your actual Klocwork server port
           token: ${{ secrets.NEW_KLOCWORK_APP_TOKEN }}
           license-host: ${{ vars.KLOCWORK_LICENSE }}
           username: ${{ vars.KLOCWORK_USERNAME }}
-          build-tool:  ${{ vars.KLOCWORK_BUILD_TOOL }}
+          build-tool: ${{ vars.KLOCWORK_BUILD_TOOL }}
