Comment out IP retrieval step in Klocwork workflow
Comment out the step to get the runner's public IP in the Klocwork workflow.

--- a/.github/workflows/klocwork1.yml
+++ b/.github/workflows/klocwork1.yml
@@ -28,15 +28,15 @@ jobs:
           echo "Step id is ${{ steps.internal.id }}"
           curl checkip.amazonaws.com
 
-      - name: Get runner public IP
-        id: get_ip
-        shell: bash
-        run: |
-          RUNNER_IP=$(curl -s icanhazip.com)
-          echo "Runner's Public IP: $RUNNER_IP"
-          echo "Waiting 2 minutes for SG update..."
-          sleep 120
-          echo "RUNNER_IP=$RUNNER_IP" >> $GITHUB_ENV
+    #  - name: Get runner public IP
+    #    id: get_ip
+    #    shell: bash
+    #    run: |
+    #      RUNNER_IP=$(curl -s icanhazip.com)
+    #      echo "Runner's Public IP: $RUNNER_IP"
+     #     echo "Waiting 2 minutes for SG update..."
+     #     sleep 120
+     #     echo "RUNNER_IP=$RUNNER_IP" >> $GITHUB_ENV
 
       - name: Klocwork scan
         uses: cloudbees-io-gha/perforce-klocwork-sast-publish@v1
