Update runner configuration for klocwork workflow

--- a/.github/workflows/klocwork-lable.yml
+++ b/.github/workflows/klocwork-lable.yml
@@ -14,8 +14,8 @@ permissions:
 jobs:
   klocwork-codescan:
     runs-on:
-      group: large-runners
-      labels: ubuntu-latest
+       ["ubuntu-latest", "large"]  
+    
     steps:
       
          
