--- a/.github/workflows/klocwork-lable.yml
+++ b/.github/workflows/klocwork-lable.yml
@@ -1,54 +1,58 @@
-name: Perforce Klocwork scan  
+name: Perforce Klocwork scan
 
 on:
   push:
     branches:
       - main
 
-permissions:
-  id-token: write      # needed for OIDC token access
-  contents: read       # needed for actions/checkout
-
-
+env:
+  # Allowed GitHub Large Runner IP ranges
+  GITHUB_LARGE_RUNNER_RANGES: |
+    [
+      "20.120.206.64/29",
+      "4.236.226.144/29",
+      "4.157.3.96/29",
+      "51.8.128.32/29"
+    ]
 
 jobs:
   klocwork-codescan:
-    runs-on:
-       ["ubuntu-latest", "large"]  
-    
+    runs-on: ubuntu-latest
+
     steps:
-      
-         
       - name: Checkout repository code
         uses: actions/checkout@v3
 
-      - name: Print GITHUB_RUN_ID
-        shell: bash
+      - name: Detect runner public IP
+        id: get_ip
         run: |
-          echo "Ref name is $GITHUB_RUN_ID"
-          echo "Source is ${{ github.server_url }}/${{ github.repository }}"
-          echo "Subject is $GITHUB_WORKFLOW_REF|${{ github.run_id }}|${{ github.run_attempt }}|${{ github.run_number }}"
-          echo "Job is $GITHUB_JOB"
-          echo "Step id is ${{ steps.internal.id }}"
-          curl checkip.amazonaws.com
+          RUNNER_IP=$(curl -s https://checkip.amazonaws.com)
+          echo "Runner public IP: $RUNNER_IP"
+          echo "RUNNER_IP=$RUNNER_IP" >> $GITHUB_ENV
 
-
-    #  - name: Get runner public IP
-    #    id: get_ip
-    #    shell: bash
-    #    run: |
-    #      RUNNER_IP=$(curl -s icanhazip.com)
-    #      echo "Runner's Public IP: $RUNNER_IP"
-     #     echo "Waiting 2 minutes for SG update..."
-     #     sleep 120
-     #     echo "RUNNER_IP=$RUNNER_IP" >> $GITHUB_ENV
+      - name: Check IP is allowed
+        run: |
+          echo "Checking if $RUNNER_IP is in allowed ranges..."
+          ALLOWED=$(echo '${{ env.GITHUB_LARGE_RUNNER_RANGES }}' | jq -r '.[]')
+          IN_RANGE=false
+          for range in $ALLOWED; do
+            if ipcalc -c $RUNNER_IP $range > /dev/null 2>&1; then
+              IN_RANGE=true
+            fi
+          done
+          if [ "$IN_RANGE" = false ]; then
+            echo "Runner IP $RUNNER_IP is not in allowed ranges. Failing job."
+            exit 1
+          else
+            echo "Runner IP $RUNNER_IP is allowed."
+          fi
+        shell: bash
 
       - name: Klocwork scan
         uses: cloudbees-io-gha/perforce-klocwork-sast-publish@v1
         with:
           cloudbees-url: ${{ vars.CLOUDBEES_QA_API_URL }}
-          # Insert the runner's public IP dynamically into the KLOCWORK_URL
-          url: ${{ vars.KLOCWORK_URL }}  # replace 'port' with your actual Klocwork server port
+          url: ${{ vars.KLOCWORK_URL }}
           token: ${{ secrets.NEW_KLOCWORK_APP_TOKEN }}
           license-host: ${{ vars.KLOCWORK_LICENSE }}
           username: ${{ vars.KLOCWORK_USERNAME }}
