--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -17,6 +17,8 @@ jobs:
       #Checkout code
       - name: Checkout repository code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
      
       #  Print GITHUB_RUN_ID and other info
