Update checkout action to fetch full repository history
Set fetch-depth to 0 for full history checkout.

--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -17,6 +17,8 @@ jobs:
       #Checkout code
       - name: Checkout repository code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 
        
 
      
