--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -42,7 +42,7 @@ jobs:
           username: ${{ vars.KLOCWORK_USERNAME }}
           project-name: test-cmake-gha
           build-directory: ctest
-          build-tool: make
+          build-tool: cmake
           build-options: |
-              cmake -DCMAKE_USE_OPENSSL=OFF
-              make -j14
+            cmake -DCMAKE_USE_OPENSSL=OFF
+            make -j14
