--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -1,5 +1,3 @@
-name: Perforce Klocwork scan cpp  
-
 on:
   push:
     branches:
@@ -17,8 +15,14 @@ jobs:
       # Checkout code
       - name: Checkout repository code
         uses: actions/checkout@v4
-        
-       
+
+      # Install required libraries on self-hosted runner
+      - name: Install build dependencies
+        shell: bash
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential cmake libssl-dev pkg-config
+
       # Print run info
       - name: Print run info
         shell: bash
@@ -29,7 +33,6 @@ jobs:
           echo "Job is $GITHUB_JOB"
           echo "Step id is ${{ steps.internal.id }}"
           curl checkip.amazonaws.com
-
 
       # Run Klocwork scan
       - name: Klocwork scan
@@ -44,5 +47,3 @@ jobs:
           build-directory: ctest
           build-tool: cmake
           build-options: make -j14
-           
-            
