--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -18,10 +18,11 @@ jobs:
 
       # Install required libraries on self-hosted runner
       - name: Install build dependencies
-        shell: bash
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential cmake libssl-dev pkg-config
+          export DEBIAN_FRONTEND=noninteractive
+          apt-get update -y
+          apt-get install -y build-essential cmake libssl-dev pkg-config
+        shell: bash
 
       # Print run info
       - name: Print run info
